--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -23,10 +23,11 @@
            
             <ul class="navbar-nav mx-auto d-flex align-items-center">
                 <li class="nav-item pl-3">
-                <a class="m-0 fw-bold text-white fs-16 m-3">Sair <i class="fa fa-sign-out" aria-hidden="true"></i>  </a>
+                <a class="m-0 fw-bold text-white fs-16 m-3">Sair aqui <i class="fa fa-sign-out" aria-hidden="true"></i>  </a>
 
 
                 </li>
+               
                
 
             </ul> 
