--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -1,1 +1,44 @@
-<p>entrar works!</p>
+<div class="container fluid">
+<div class="row d-flex align-items-center">
+    
+    <div class="col-md-6">
+        <div class="row d-flex justify content-center">
+            <div class="cold-md-6">
+
+                <h1 class="text-center mb-3">Entrar</h1>
+
+                <div class="form-group">
+                <label for="usuário">Usuário</label>
+                <input class="form-control" type="text" name="Usuário" Id="Usuário" placeholder="Seu usuário">
+                </div>
+
+
+               <div class="form-group">
+                <h1 class="text-center mb-3">Senha</h1>
+                <div class="form-group">
+                <label for="Senha">Senha</label>
+                <input class="form-control" type="password" name="Senha" Id="Senha" placeholder="Sua senha">
+               </div>
+
+            <div class="d-flex justify-content-center">
+
+            <button type="submit" class= "btn btn-success"> Entrar</button>
+            </div>
+
+            <hr class="mt-5 mb-5">
+
+            <p class="text-center">
+                Não tem uma conta? <a href="">Cadastra-se</a> 
+            </p>
+
+            </div>
+
+        </div>
+    
+    </div>
+
+    <div class="col-md-6" id="img-bg"></div>
+
+</div>
+
+
