--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -48,7 +48,7 @@
                             <label for="tipo">Tipo de usuário</label>
                             <select class="form-control" name="Tipo" Id="tipo">
 
-                                <option> Selecione um tipo de usuário:</option>
+                                <option> Selecione um tipo de usuario:</option>
                                 <option value="normal">Normal</option>
                                 <option value="adm"> Administrador</option>
                             </select>
