--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -56,7 +56,7 @@
 
                         <div class="d-flex justify-content-center">
 
-                            <button type="submit" class="btn btn-danger mx-4"> Cancelar</button>
+                            <button type="submit" class="btn btn-danger mx-4" routerLink='/entrar' >Cancelar</button>
                             <button type="submit" class="btn btn-success">Cadastrar</button>
 
                         </div>
