--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -12,7 +12,8 @@
 
                     <div class="form-group">
                         <label for="usuário">Nome</label>
-                        <input class="form-control" type="text" name="Usuário" Id="Usuário" placeholder="Seu nome">
+                        <input [(ngModel)]= 'user.nome'class="form-control" type="text" name="Usuário" Id="Usuário" placeholder="Seu nome"
+                        >
                     </div>
 
 
@@ -20,33 +21,33 @@
                         <h1 class="text-center mb-3">Usuário</h1>
                         <div class="form-group">
                             <label for="Usuário">Usuário</label>
-                            <input class="form-control" name="usuário" Id="usuário" placeholder="Seu usuário">
+                            <input [(ngModel)]="user.usuario" class="form-control" name="usuário" Id="usuário" placeholder="Seu usuário">
                         </div>
 
 
                         
                         <div class="form-group">
                             <label for="foto">Link da foto </label>
-                            <input class="form-control" type="text" name="foto" Id="foto"
+                            <input [(ngModel)]="user.foto" class="form-control" type="text" name="foto" Id="foto"
                                 placeholder="Link da sua foto">
                         </div>
 
                         <div class="form-group">
 
                             <label for="Senha">Senha</label>
-                            <input class="form-control" type="password" name="Senha" Id="Senha" placeholder="Sua senha">
+                            <input (input)= 'confirmSenha($event)' class="form-control" type="password" name="Senha" Id="Senha" placeholder="Sua senha">
                         </div>
 
 
                         <div class="form-group">
                             <label for="Confirme">Confirme sua senha</label>
-                            <input class="form-control" type="password" name="Senha" Id="Senha"
+                            <input [(ngModel)]="user.senha" class="form-control" type="password" name="Senha" Id="Senha"
                                 placeholder="confirmar sua senha">
                         </div>
 
                         <div class="form-group">
                             <label for="tipo">Tipo de usuário</label>
-                            <select class="form-control" name="Tipo" Id="tipo">
+                            <select class="form-control" name="Tipo" Id="tipo" (change)="tipoUser($event)">
 
                                 <option> Selecione um tipo de usuario:</option>
                                 <option value="normal">Normal</option>
@@ -57,7 +58,8 @@
                         <div class="d-flex justify-content-center">
 
                             <button type="submit" class="btn btn-danger mx-4" routerLink='/entrar' >Cancelar</button>
-                            <button type="submit" class="btn btn-success">Cadastrar</button>
+                            <button type="submit" class="btn btn-success"(click)="cadastrar()"
+                            >Cadastrar</button>
 
                         </div>
 
