--- a/src/app/cadastrar/cadastrar.component.css
+++ b/src/app/cadastrar/cadastrar.component.css
@@ -3,7 +3,7 @@
 
     background-image: url('https://i.imgur.com/w3d95jN.jpg');
 
-   min-height: 695px;
+   min-height: 100vh;
 
    background-position: center;
    background-repeat: no-repeat;
