--- a/src/app/entrar/entrar.component.css
+++ b/src/app/entrar/entrar.component.css
@@ -1,7 +1,7 @@
 #img-bg{
     background-image: url("../../assets/login.jpg");
 
-    min-height: 695px;
+    min-height: 100vh; 
   
     background-position: center;
     background-repeat:no-repeat;
