--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -1,15 +1,15 @@
-<div class="container fluid">
+<div class="container-fluid">
 <div class="row d-flex align-items-center">
     
     <div class="col-md-6">
-        <div class="row d-flex justify content-center">
-            <div class="cold-md-6">
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-6">
 
                 <h1 class="text-center mb-3">Entrar</h1>
 
                 <div class="form-group">
                 <label for="usuário">Usuário</label>
-                <input class="form-control" type="text" name="Usuário" Id="Usuário" placeholder="Seu usuário">
+                <input [(ngModel)]='userLogin.usuario' class="form-control" type="text" name="Usuário" Id="Usuário" placeholder="Seu usuário">
                 </div>
 
 
@@ -17,12 +17,12 @@
                 <h1 class="text-center mb-3">Senha</h1>
                 <div class="form-group">
                 <label for="Senha">Senha</label>
-                <input class="form-control" type="password" name="Senha" Id="Senha" placeholder="Sua senha">
+                <input [(ngModel)]='userLogin.senha'  class="form-control" type="password" name="Senha" Id="Senha" placeholder="Sua senha">
                </div>
 
             <div class="d-flex justify-content-center">
 
-            <button type="submit" class= "btn btn-success"> Entrar</button>
+            <button type="submit" class= "btn btn-success"(click)="entrar()"> Entrar</button>
             </div>
 
             <hr class="mt-5 mb-5">
@@ -36,6 +36,7 @@
         </div>
     
     </div>
+</div>
 
     <div class="col-md-6" id="img-bg"></div>
 
