--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,1 +1,93 @@
-<p>inicio works!</p>
+<div class="container-fluid">
+
+<div class="row bg-secondary d-flex align-items-center">
+    <div class="col-md-6">  
+<div class="row d-flex justify-content-center">
+    <div class="col-md-6 text-white">
+<h1 class="fs-54">  Seja Bem vindo(a)!</h1>
+<h5 class="fs-18"> Expresse aqui seus pensamentos!</h5>
+
+    </div>
+</div>
+
+<div class="row d-flex justify-content-center mt-3 mb-5">
+  <div class="col-md-6">
+<button class="btn btn-outline-light mr-2" data-toggle="modal" 
+data-target="#exampleModal">Nova Postagem</button>
+<a class= "btn btn-outline-light" href="#postagens"> Ver Postagens</a>
+  </div>
+</div>
+
+</div>
+<div class="col-md-6  d-flex justify-content-center">
+    <img src="https://i.imgur.com/Lr8SQn8.png" alt="" width="500px" height="500px"> 
+
+</div>
+</div>
+</div>
+
+<div class="container mb-5 mt-5" id="postagens">
+
+    <nav>
+        <div class="nav nav-tabs d-flex justify-content-center" id="nav-tab" role="tablist">
+         
+          <a class="nav-link active text-secondary font-weight-bold" id="nav-TodasPostagens-tab" data-toggle="tab" href="#TodasPostagens" role="tab" aria-controls="nav-TodasPostagens" aria-selected="true">Todas as Postagens </a>
+
+          <a class="nav-link text-secondary font-weight-bold" id="nav-MinhasPostagens-tab" data-toggle="tab" href="#MinhasPostagens" role="tab" aria-controls="nav-MinhasPostagens" aria-selected="false">Minhas Postagens</a>
+
+          <a class="nav-link text-secondary font-weight-bold" id="nav-PostagensTema-tab" data-toggle="tab" href="#PostagensTema" role="tab" aria-controls="nav-PostagensTema" aria-selected="false">Postagens por Tema</a>
+        </div>
+      </nav>
+
+      <div class="tab-content" id="nav-tabContent">
+
+        <div class="tab-pane fade show active" id="TodasPostagens" role="tabpanel" aria-labelledby= "nav-TodasPostagens-tab" > Todas as Postagens</div>
+
+        <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="nav-MinhasPostagens-tab">Minhas Postagens </div>
+
+        <div class="tab-pane fade" id="PostagensTema" role="tabpanel" aria-labelledby="nav-PostagensTema-tab">Postagens por tema
+
+        </div>
+
+        </div>
+
+</div>
+
+  
+ <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Nova postagem</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="titulo">Título</label>
+              <input type="text" class="form-control" id="titulo" name="titulo" placeholder="Digite o título">
+            </div>
+  
+            <div class="form-group">
+              <label for="texto">Texto</label>
+              <textarea class="form-control" name="texto" id="texto" rows="3"></textarea>
+            </div>
+  
+            <div class="form-group">
+              <label for="texto">Escolha um tema ou <a routerLink="/temas" data-dismiss="modal">cadastre um novo</a>: </label>
+              <select name="tema" id="tema" class="form-control">
+                <option value="">Temas</option>
+              </select>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-outline-dark px-4">Publicar</button>
+        </div>
+      </div>
+    </div>
+  </div>
