--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -2,17 +2,17 @@
 
 <div class="container">
 
-    <div class="row">
+    <div class="row d-flex justify-content-center">
 <div class="col-md-12 d-flex justify-content-center">
     <h4 class="text-white"> Siga-nos nas redes sociais </h4>
 
 </div>
 
-<div class="row">
+<div class="row d-flex justify-content-center">
     <div class="col-md-12 d-flex justify-content-center">
 
 
-        <ul class="social-network">
+        <ul class="social-network ">
             <li>
 
         <a href="https://www.facebook.com/generationbrasil" target="_blank" class="icoFacebook">
