--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -77,7 +77,7 @@ data-target="#exampleModal">Nova Postagem</button>
             </div>
   
             <div class="form-group">
-              <label for="texto">Escolha um tema ou <a routerLink="/temas" data-dismiss="modal">cadastre um novo</a>: </label>
+              <label for="texto">Escolha um tema ou <a routerLink="/tema" data-dismiss="modal">cadastre um novo</a>: </label>
               <select name="tema" id="tema" class="form-control">
                 <option value="">Temas</option>
               </select>
